[package]
name = "toda"
version = "0.2.3"
authors = ["Yang Keao <keao.yang@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
nix = "0.18"
anyhow = "1.0"
fuser = {version = "0.6", features = ["abi-7-19"]}
time = "0.1"
libc = "0.2"
async-trait = "0.1"
tokio = {version = "1.19", features = ["sync", "fs", "time", "macros", "full"]}
tokio-util = "0.7"
thiserror = "1.0"
futures = "0.3"
derive_more = "0.99.9"
glob = "0.3"
bitflags = "1.2"
rand = "0.7"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
humantime-serde = "1.0"
slab = "0.4"
once_cell = "1.4"
dynasmrt = "1.0.0"
procfs = "0.8.0"
itertools = "0.9.0"
env_logger = "0.8"
retry = "1.2.0"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
hyper = {version = "0.14", features = ["runtime", "client", "server", "http1", "http2", "stream"]}
# hyper = {git = "https://github.com/Andrewmatilde/hyper.git", features = ["runtime", "client", "server", "http1", "http2", "stream", "error_return"]}
# hyper-rustls = { git = "https://github.com/Andrewmatilde/hyper-rustls.git", features = ["http2"] }
hyper-rustls = {  version = "0.23", features = ["http2"] }
http = "0.2.7"

[profile.release]
debug = true
